# flowmpl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: annotate_dd001_illustrations.py  build_icons.py  dd001_annotation_editor.py  energy_pipeline.py  gemini_generate_scene.py  generate_tariff_scene.py  pptx_baseline.json  pptx_preferences.json  sync_pptx_feedback.py
src/flowmpl/: __init__.py  charts.py  concept.py  design.py  export.py  flow.py  ft_charts.py  helpers.py  icons.py  illustrations.py  lint.py  maps.py  palettes.py  shakes.mplstyle  strategy.py
